package Spawn;

message MouseEvent {
	required int32 x = 1;
	required int32 y = 2;
	required int32 buttons = 3;
	required int32 modifiers = 4;
	
	// For mouse events
	optional int32 button = 5;
	
	// For wheel events
	optional int32 delta = 6;
	optional int32 orientation = 7;
}

message KeyEvent {
	required int32 key = 1;
	required int32 modifiers = 2;
	required string text = 3;
	required bool auto_repeat = 4;
	required int32 count = 5;
}

message ResizeEvent {
	required int32 width = 1;
	required int32 height = 2;
	required string memory_key = 3;
}
